--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19"
+    "zone.js": "^0.8.19",
+    "bootstrap": "~4.1.1",
+    "jquery": "~3.3.1",
+    "popper": "^1.0.1",
+    "angular2-uuid": "~1.1.1"
   },
   "devDependencies": {
     "@angular/cli": "~1.7.3",
@@ -41,6 +45,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
+    "serverless-finch": "^2.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
