--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19",
+    "angular2-uuid": "~1.1.1",
     "bootstrap": "~4.1.1",
+    "core-js": "^2.4.1",
     "jquery": "~3.3.1",
     "popper": "^1.0.1",
-    "angular2-uuid": "~1.1.1"
+    "rxjs": "^5.5.6",
+    "serverless": "^1.30.3",
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "~1.7.3",
